﻿Version 0.1.4.3 (13/02-2014):

	- General:
		- The game was named! It is now called:

					The Legend of Eiwar!

		- A new game mode was added! You can now play with multiple of your characters against the computer!
		- The UI has not be rewamped completely, but certain elements have been significantly improved!
		- The bug with text being out of place has been fixed.

	- Monsters:
		- Monster AI's were modified to take into account how many players it is battling against.
		- "Desperation" was changed: "This ability deals 15% of the monsters health deficit in damage 
		  to a (was all) character!". Monsters with "Desperation" were unkillable by parties.

	- Classes:
		- Thief: 
			- "Copycat" was removed and replaced with "Poisoned Blade":
			- Poisoned Blade: "Deals 140% of the Thiefs Attack and 75% of his Agility in damage."
			- "Borrow Weapon" was changed: "The Thief uses the best attack of his allies together with 
			  his own, dealing 85% (was 65%) of their combined damage."
		- Caretaker:
			- "Bodyslam" was changed: "Deals 25% (was 20%) of the Caretakers maximum health in damage
			  to the target."
		
_________________________________________________________________________________________________________
Version 0.1.3.16 (20/11-2013):

	NOTICE: I am entering a busy exam period and I also plan to rework the entire UI to be more smooth 
	        and easier to work with. This means there wont be any new features added to the game in the
			near future, however the game will be named and have a better look once I am done with the
			UI overhauling.

			Thank you for your patience :)
_________________________________________________________________________________________________________
Version 0.1.3.15 (20/11-2013):

	- General:
		- Made some tweaks to the stats given to Grand items, so they will receive less stats 
		  on average than before.
		- Changed the way Epochal items where awarded: