@@ -8,6 +8,9 @@
 		- A new game mode was added! You can now play with multiple of your characters against the computer!
 		- The UI has not be rewamped completely, but certain elements have been significantly improved!
 		- The bug with text being out of place has been fixed.
+		- Fixed a bug where the game would crash when the player lost a battle to a "Fireball" and
+		  "Atonement Smite" opponent.
+		- Fixed a bug where "Desperation" and "Growing Despair" opponents would deal damage to dead players.
 
 	- Monsters:
 		- Monster AI's were modified to take into account how many players it is battling against.
